--- a/assignment/package.json
+++ b/assignment/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "ajv": "^6.0.0",
     "material-ui": "^0.20.1",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
