--- a/my-app/package.json
+++ b/my-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@types/react": "^16.4.1",
+    "ajv": "^6.0.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-router": "^4.3.1",
