--- a/assignment/package.json
+++ b/assignment/package.json
@@ -1,15 +1,22 @@
 {
-  "name": "my-app",
+  "name": "assignment",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "ajv": "^6.5.3",
+    "material-ui": "^0.20.2",
     "react": "^16.5.2",
+    "react-bootstrap": "^0.32.4",
+    "react-bootstrap-switch": "^15.5.3",
+    "react-bootstrap-table": "^4.3.1",
     "react-dom": "^16.5.2",
     "react-redux": "^5.0.7",
-    "react-router": "^4.3.1",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "1.1.4",
+    "react-toastify": "^4.3.1",
+    "react-toggle": "^4.0.2",
     "redux": "^4.0.0"
   },
   "scripts": {
@@ -17,5 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "babel-plugin-import": "^1.9.1"
   }
 }
