--- a/assignment/package.json
+++ b/assignment/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "ajv": "^6.5.3",
+    "hoek": "^5.0.4",
     "material-ui": "^0.20.2",
     "react": "^16.5.2",
     "react-bootstrap": "^0.32.4",
