--- a/my-app/package.json
+++ b/my-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@types/react": "^16.4.14",
     "ajv": "^6.0.0",
+    "hoek": "^5.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
