--- a/web-app/package.json
+++ b/web-app/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "create-react-class": "^15.6.3",
     "eslint-plugin-react": "^7.11.1",
+    "hoek": "^5.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-router-dom": "^4.3.1",
