--- a/assignment/package.json
+++ b/assignment/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "1.1.4",
     "react-toastify": "^4.3.1",
     "react-toggle": "^4.0.2",
-    "redux": "^4.0.0"
+    "redux": "^4.0.0",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
