--- a/my-app/package.json
+++ b/my-app/package.json
@@ -11,7 +11,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "standard": "^11.0.1"
+    "standard": "^11.0.1",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
