--- a/new-router/package.json
+++ b/new-router/package.json
@@ -10,7 +10,8 @@
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "react-table": "^6.8.6"
+    "react-table": "^6.8.6",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
